v4 migration - workouts days initial work, scroll is fixed but display is too long

--- a/src/app/pages/workout-days/workout-days.page.scss
+++ b/src/app/pages/workout-days/workout-days.page.scss
@@ -1,6 +1,6 @@
-ion-slide {
-    display: block!important;
-}
+// ion-slide {
+//     display: block!important;
+// }
 ion-content {
 //    background: color($colors, secondary)!important;
 }
